fixed spacing, better marker view html,

--- a/14-Advanced/HousingWebApp/Shared/MainLayout.razor.css
+++ b/14-Advanced/HousingWebApp/Shared/MainLayout.razor.css
@@ -71,8 +71,5 @@ main {
         z-index: 1;
     }
 
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+
 }
